chore: move conversion lore to components to func